kubernetes/kube-system/keycloak/keycloak-gatekeeper.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-gatekeeper
  namespace: kube-system
  labels:
    app: keycloak-gatekeeper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak-gatekeeper
  template:
    metadata:
      labels:
        app: keycloak-gatekeeper
    spec:
      volumes:
        - name: gatekeeper-config
          configMap:
            name: gatekeeper-config
            items:
            - key: keycloak-auth-proxy.conf
              path: keycloak-auth-proxy.conf
            defaultMode: 0755
      containers:
      - name: keycloak-gatekeeper
        image: keycloak/keycloak-gatekeeper
        command: 
          - /opt/keycloak-gatekeeper
          - --config=/bas/keycloak-auth-proxy.conf
        ports:
        - name: http
          containerPort: 3000
        volumeMounts:
          - name: gatekeeper-config
            mountPath: /bas/
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: keycloak-gatekeeper
  name: keycloak-gatekeeper
  namespace: kube-system
spec:
  ports:
  - name: http
    targetPort: 3000
    port: 80
  selector:
    app: keycloak-gatekeeper
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: keycloak-gatekeeperingress
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: keycloak-gatekeeper.bas
    http:
      paths:
      - path: /
        backend:
          serviceName: keycloak-gatekeeper
          servicePort: 80
