kubernetes/kube-system/keycloak/keycloak.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: kube-system
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      volumes:
        - name: keycloak-config-volume
          persistentVolumeClaim:
            claimName: keycloak-config-claim
      containers:
      - name: keycloak
        image: jboss/keycloak
        ports:
        - name: http
          containerPort: 8080
        volumeMounts:
          - name: keycloak-config-volume
            mountPath: /opt/jboss/keycloak/standalone/data
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: keycloak
  name: keycloak
  namespace: kube-system
spec:
  ports:
  - name: http
    targetPort: 8080
    port: 80
  selector:
    app: keycloak
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: keycloakingress
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: keycloak.bas
    http:
      paths:
      - path: /
        backend:
          serviceName: keycloak
          servicePort: 80
